--- a/dev.html
+++ b/dev.html
@@ -423,7 +423,21 @@
 
   .version{font-size:12px;opacity:.75;margin-left:8px;white-space:nowrap;}
 
-  .photo-input{display:none !important;}
+  .photo-input{position:absolute;inset:0;width:100%;height:100%;opacity:0;cursor:pointer;}
+
+    .bg-upload{
+      display:inline-flex; align-items:center; justify-content:center;
+      width:44px; height:32px; border-radius:12px;
+      border:1px solid rgba(255,255,255,.18);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.92);
+      font-size:18px;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      cursor:pointer;
+    }
+    .bg-upload:active{ transform: translateY(1px); }
+
 </style>
 </head>
 
@@ -1084,8 +1098,6 @@ game.classList.add("goldGlow");
   async function runRound(token) {
     // Reset misses at the start of each round
     missesUsed = 0;
-    renderMisses();
-
     phase = "transition";
     clearBoard();
     syncLinesViewport();
@@ -1180,8 +1192,6 @@ game.classList.add("goldGlow");
       // Wrong click: allow up to MISS_LIMIT misses per round (do not end immediately)
       playFail();
       missesUsed = Math.min(MISS_LIMIT, missesUsed + 1);
-      renderMisses();
-
       circleObj.el.classList.add("wrong");
       setTimeout(() => circleObj.el?.classList.remove("wrong"), 260);
 
@@ -1285,10 +1295,18 @@ game.classList.add("goldGlow");
 
 })();
 
-  renderMisses();
+  // DEBUG: show a tiny dot when JS has loaded
+  (function(){
+    const d=document.createElement('div');
+    d.style.cssText='position:fixed;right:6px;bottom:6px;width:8px;height:8px;border-radius:999px;background:rgba(0,255,120,.8);z-index:99;';
+    d.title='JS loaded';
+    document.body.appendChild(d);
+    setTimeout(()=>{d.remove();}, 2500);
+  })();
+
 </script>
 
 
-  <input id="bgFileInput" type="file" accept="image/*" style="display:none" />
+  <input id="bgFileInput" type="file" accept="image/*" style="position:fixed;left:-9999px;top:0;width:1px;height:1px;opacity:0;" />
 </body>
 </html>
