--- a/dev.html
+++ b/dev.html
@@ -480,8 +480,7 @@
         </p>
         <div class="row">
           <button id="restartFromOverlay">Play Again</button>
-          <button id="closeFromOverlay">Close</button>
-        </div>
+                  </div>
       </div>
     </div>
 
@@ -613,9 +612,7 @@ const endBtn = document.getElementById("endBtn");
   const overlay = document.getElementById("overlay");
   const scoreEl = document.getElementById("score");
   const restartFromOverlay = document.getElementById("restartFromOverlay");
-  const closeFromOverlay = document.getElementById("closeFromOverlay");
-
-  const linesLayer = document.getElementById("linesLayer");
+const linesLayer = document.getElementById("linesLayer");
 
   function clearLines(){
     while (linesLayer.firstChild) linesLayer.removeChild(linesLayer.firstChild);
@@ -652,7 +649,7 @@ const endBtn = document.getElementById("endBtn");
   const SHOW_RADIUS_MAX = 54;
 
   let RECALL_RADIUS   = 22;    // adjustable size for recall
-  function paddingBetween(){ return Math.max(10, Math.round(0.25 * Math.max(SHOW_RADIUS_MAX, RECALL_RADIUS))); }    // non-overlap margin
+  const PADDING_BETWEEN = 12;    // non-overlap margin
 
   const BETWEEN_ROUNDS_MS = 900; // pause after success/fail
 
@@ -676,58 +673,6 @@ const endBtn = document.getElementById("endBtn");
     { name:"teal",    h:165,  s:80, l:48 },
     { name:"amber",   h: 42,  s:95, l:56 },
   ];
-
-
-  // ---------- Color helpers (make each circle color truly random) ----------
-  function hslToRgb(h, s, l){
-    // h:0-360, s/l:0-100
-    s /= 100; l /= 100;
-    const c = (1 - Math.abs(2*l - 1)) * s;
-    const hh = (h % 360) / 60;
-    const x = c * (1 - Math.abs((hh % 2) - 1));
-    let r=0,g=0,b=0;
-    if (0 <= hh && hh < 1){ r=c; g=x; b=0; }
-    else if (1 <= hh && hh < 2){ r=x; g=c; b=0; }
-    else if (2 <= hh && hh < 3){ r=0; g=c; b=x; }
-    else if (3 <= hh && hh < 4){ r=0; g=x; b=c; }
-    else if (4 <= hh && hh < 5){ r=x; g=0; b=c; }
-    else { r=c; g=0; b=x; }
-    const m = l - c/2;
-    r = Math.round((r+m)*255);
-    g = Math.round((g+m)*255);
-    b = Math.round((b+m)*255);
-    return [r,g,b];
-  }
-
-  function clamp255(v){ return Math.max(0, Math.min(255, Math.round(v))); }
-
-  function rgbCss(r,g,b){ return `rgb(${clamp255(r)}, ${clamp255(g)}, ${clamp255(b)})`; }
-
-  // Take a base HSL swatch and "randomize" it by multiplying RGB channels by random factors.
-  function randomizedColorFromSwatch(swatch){
-    const [br,bg,bb] = hslToRgb(swatch.h, swatch.s, swatch.l);
-
-    const fr = 0.75 + Math.random()*0.45;   // 0.75–1.20
-    const fg = 0.75 + Math.random()*0.45;
-    const fb = 0.75 + Math.random()*0.45;
-
-    let r = br * fr, g = bg * fg, b = bb * fb;
-
-    // Ensure not too dark
-    const minBright = 70;
-    const maxCh = Math.max(r,g,b);
-    if (maxCh < minBright){
-      const scale = minBright / (maxCh || 1);
-      r *= scale; g *= scale; b *= scale;
-    }
-
-    return rgbCss(r,g,b);
-  }
-
-  function pickRandomCircleColorCss(){
-    const sw = COLOR_PALETTE[Math.floor(Math.random()*COLOR_PALETTE.length)];
-    return randomizedColorFromSwatch(sw);
-  }
 
   // ---------- Bold, distinct tones (fixed mapping) ----------
   const NOTE_FREQS = [
@@ -1034,6 +979,7 @@ game.classList.add("goldGlow");
 
       for (let tries=0; tries<250; tries++) {
         const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
+    const rSafe = Math.max(SHOW_RADIUS_MAX, RECALL_RADIUS) + 8;
         const cx = rand(ar.left + rShow, ar.left + ar.width  - rShow);
         const cy = rand(ar.top  + rShow, ar.top  + ar.height - rShow);
         const candidate = { cx, cy, rShow };
@@ -1059,8 +1005,6 @@ game.classList.add("goldGlow");
   async function runRound(token) {
     // Reset misses at the start of each round
     missesUsed = 0;
-    renderMisses();
-
     phase = "transition";
     clearBoard();
     syncLinesViewport();
@@ -1155,8 +1099,6 @@ game.classList.add("goldGlow");
       // Wrong click: allow up to MISS_LIMIT misses per round (do not end immediately)
       playFail();
       missesUsed = Math.min(MISS_LIMIT, missesUsed + 1);
-      renderMisses();
-
       circleObj.el.classList.add("wrong");
       setTimeout(() => circleObj.el?.classList.remove("wrong"), 260);
 
@@ -1220,10 +1162,7 @@ game.classList.add("goldGlow");
     ensureAudio();
     endGame();
   });
-
-  closeFromOverlay.addEventListener("click", () => {
-    attemptClose();
-  });
+});
 
   restartFromOverlay.addEventListener("click", () => {
     overlay.classList.remove("show");
@@ -1246,8 +1185,6 @@ game.classList.add("goldGlow");
   startBtn.addEventListener("click", () => startGame());
 
 })();
-
-  renderMisses();
 </script>
 
 
