--- a/dev.html
+++ b/dev.html
@@ -367,7 +367,7 @@
 
   /* Photo background swatch button */
   .bgSwatch.photo{
-    display:flex;
+    display:none;
     align-items:center;
     justify-content:center;
     font-size:16px;
@@ -420,10 +420,6 @@
     fill: currentColor;
     opacity:0.9;
   }
-
-/* Hide photo-upload background option (disabled for now) */
-#bgFileInput, .bgSwatch.photo, .bg-swatch.photo { display:none !important; }
-
 </style>
 
 </head>
@@ -985,7 +981,7 @@ game.classList.add("goldGlow");
       let ok = false;
 
       for (let tries=0; tries<250; tries++) {
-        const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
+        const rShow = Math.max(RECALL_RADIUS, rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX));
         const cx = rand(ar.left + rShow, ar.left + ar.width  - rShow);
         const cy = rand(ar.top  + rShow, ar.top  + ar.height - rShow);
         const candidate = { cx, cy, rShow };
@@ -999,7 +995,7 @@ game.classList.add("goldGlow");
       }
 
       if (!ok) {
-        const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
+        const rShow = Math.max(RECALL_RADIUS, rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX));
         const cx = rand(ar.left + rShow, ar.left + ar.width  - rShow);
         const cy = rand(ar.top  + rShow, ar.top  + ar.height - rShow);
         placed.push({ cx, cy, rShow });
@@ -1025,11 +1021,18 @@ game.classList.add("goldGlow");
     phase = "showing";
     setStatus(`Watch the sequence… (${N})`);
 
+    // Place circles without overlap and assign randomized colors (sound stays deterministic by index)
+    let prevColor = null;
     circles = nonOverlappingPlacement(N).map((pos, i) => {
-      const color = COLOR_PALETTE[Math.floor(Math.random() * COLOR_PALETTE.length)];
+      let color = COLOR_PALETTE[Math.floor(Math.random() * COLOR_PALETTE.length)];
+      if (prevColor && color === prevColor) {
+        color = COLOR_PALETTE[(COLOR_PALETTE.indexOf(color) + 1) % COLOR_PALETTE.length];
+      }
+      prevColor = color;
+
       const freq  = NOTE_FREQS[i % NOTE_FREQS.length];
       const wave  = WAVEFORMS[i % WAVEFORMS.length];
-      return { ...pos, index:i, color, freq, wave, el:null };
+      return { ...pos, index:(i+1), color, freq, wave, el:null };
     });
 
     circles.forEach(c => {
@@ -1155,13 +1158,11 @@ game.classList.add("goldGlow");
   }
 
   function attemptClose(){
-    // Browsers generally block window.close() for non-script-opened tabs.
-    // Instead, just dismiss the final score panel.
-    overlay.classList.remove('show');
-    panel.classList.remove('show');
-  }
+  // Mobile browsers generally block window.close(). Instead, just dismiss overlays/panels.
+  overlay.classList.remove("show");
+}
 
-function endGame(){
+  function endGame(){
     runToken++;
     showFinalScore();
   }
